--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ script:
   - docker build -t udagram-reverseproxy ./udagram-reverseproxy
   - docker build -t udagram-api-user ./udagram-api-user
   - docker build -t udagram-api-feed ./udagram-api-feed
-  - docker build -t udagram-frontend ./udagram-api-frontend
+  - docker build -t udagram-frontend ./udagram-frontend
 
 
 after_success:
