--- a/.travis.yml
+++ b/.travis.yml
@@ -15,15 +15,20 @@ before_script:
   - echo "no tests"
 
 script:
-  - docker build -t udagram-reverseproxy ./udagram-reverseproxy
+  - docker build -t reverseproxy ./udagram-reverseproxy
   - docker build -t udagram-api-user ./udagram-api-user
   - docker build -t udagram-api-feed ./udagram-api-feed
   - docker build -t udagram-frontend ./udagram-frontend
 
+  - docker tag reverseproxy  mohamedmagdy88/reverseproxy:v1
+  - docker tag udagram-api-user  mohamedmagdy88/udagram-api-user:v1
+  - docker tag udagram-api-feed  mohamedmagdy88/udagram-api-feed:v1
+  - docker tag udagram-frontend  mohamedmagdy88/udagram-frontend:v1
+
 
 after_success:
 - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-- docker push mohamedmagdy88/reverseproxy
-- docker push mohamedmagdy88/udagram-api-feed
-- docker push mohamedmagdy88/udagram-api-user
-- docker push mohamedmagdy88/udagram-frontend
+- docker push mohamedmagdy88/reverseproxy:v1
+- docker push mohamedmagdy88/udagram-api-feed:v1
+- docker push mohamedmagdy88/udagram-api-user:v1
+- docker push mohamedmagdy88/udagram-frontend:v1
